Revision history for {{$dist->name}}

{{$NEXT}}
          call article authors "authors" in the Atom, not "contributors"

1.105     2011-12-07 08:54:55 America/New_York
          only put the author's name in the feed, not email address

          include an HTML comment with the generating version in output

          don't call our Atom feed an RSS feed

1.104     2011-11-30 17:39:06 America/New_York
          css_href config option allows extra CSS hrefs to be added to output

          author gravatars are now included by default

          minor tweaks to global CSS

1.103     2011-11-08 10:56:49 America/New_York
          added article author and calendar's default_author

1.102     2011-11-03 10:50:59 America/New_York
          an article's "package" is now called its "topic" -- this will break
          your advent calendar, if you exist and have written one

1.101     2011-11-02 14:03:13 America/New_York
          The style sheet is now a template, using Color::Palette for picking
          colors to use.  The default color palette was imported from the 2009
          RJBS Advent Calendar.  A new palette can be provided in the [Palette]
          config section.

          The "subtitle" option is now "tagline" to avoid ambiguities with the
          Article formatting.

1.100     2011-10-07 18:58:51 America/New_York
          The start_date and end_date parameters can be provided for periods
          other than Advent.  This feature is still young and has a bunch of
          arbitrary restrictions.  Among other things, the date range may not
          cross a month boundary.

          A "subtitle" option has been added for the text in the bar below the
          main title.

          The default templates will be used if custom templates are not found.

          The default templates no longer have "RJBS Advent Calendar"
          hardcoded.

          The default favicon is no longer "rjbs."  Instead, it's a nice little